<resources>
    <string name="app_name">Калькулятор 2</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="minus">—</string>
    <string name="pluse">+</string>
    <string name="clear">C</string>
    <string name="delete">÷</string>
    <string name="res">=</string>
    <string name="percent">%</string>
    <string name="plmin">+/-</string>
    <string name="multiply">X</string>
    <string name="many_symbols">many symbols</string>
</resources>
