<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:text="@string/many_symbols"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="60sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/clear" />
            <Button
                android:id="@+id/button_plmin"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/plmin" />
            <Button
                android:id="@+id/button_percent"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/percent" />
            <Button
                android:id="@+id/button_del"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorOrange"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_7" />
            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_8" />
            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_9" />
            <Button
                android:id="@+id/button_x"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorOrange"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/multiply" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_4" />
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_5" />
            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_6" />
            <Button
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorOrange"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/minus" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_1" />
            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_2" />
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_3" />
            <Button
                android:id="@+id/button_pl"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorOrange"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/pluse" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="2"
                android:layout_margin="1dp"
                android:text="@string/_0" />
            <Button
                android:id="@+id/button_point"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:background="@color/colorGray"
                android:textSize="30sp"
                android:layout_weight="3"
                android:layout_margin="1dp"
                android:text="@string/point" />
            <Button
                android:id="@+id/button_res"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorOrange"
                android:textSize="30sp"
                android:layout_weight="3"
                android:layout_margin="1dp"
                android:text="@string/res" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>